--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .main {
         margin:0 auto; /* Центрируем блоки */
         width:100%; /* Задаем ширину 100%, чтобы сделать ее резиновой */
-        max-width:800px; /* Устанавливаем максимальную ширину */
+        max-width:780px; /* Устанавливаем максимальную ширину */
         }
         .inline div{
         display:inline-block; /* Делаем блоки по горизонтали */
@@ -23,7 +23,6 @@
         }
         div.inline{font-size:0;} /* Ставим родителю значение 0, чтобы убрать отступы у блоков*/
         .col-1{
-        background: palegreen;
         width:25%; /*Задаем ширину в процентах чтобы сделать ее резиновой*/
         height:150px; /* Высота блока */
         }
@@ -63,7 +62,7 @@
 <body>
     <div class="main inline">
         <div class="col-1">
-            <img class="arguments" src="/images/argument1.png" alt="первая причина - это you">
+            <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument1.png?raw=true" alt="первая причина - это you">
             <h3>Большой ассортимент</h3>
         </div>
         <div class="col-2">
