--- a/index.html
+++ b/index.html
@@ -25,18 +25,24 @@
         .col-1{
         width:25%; /*Задаем ширину в процентах чтобы сделать ее резиновой*/
         height:150px; /* Высота блока */
+        background:rgb(255, 219, 244);
+        border-radius: 20px 0px 0px 20px;
         }
         .col-2{
         width:25%; /*Задаем ширину в процентах чтобы сделать ее резиновой*/
         height:150px; /* Высота блока */
+        background:rgb(255, 219, 225);
         }
         .col-3{
         width:25%;
         height:150px;
+        background:rgb(255, 219, 244);
         }
         .col-4{
         width:25%;
         height:150px;
+        background:rgb(255, 219, 225);
+        border-radius: 0px 20px 20px 0px;
         }
 
         @media (max-width:600px){
@@ -63,18 +69,18 @@
     <div class="main inline">
         <div class="col-1">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument1.png?raw=true" alt="первая причина - это you">
-            <h3>Большой ассортимент</h3>
+            <h3>Многообразие</h3>
         </div>
         <div class="col-2">
-            <img class="arguments" src="/images/argument2.png" alt="а вторая - все твои dreams">
+            <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument2.png?raw=true" alt="а вторая - все твои dreams">
             <h3>Низкие цены</h3>
         </div>
         <div class="col-3">
-            <img class="arguments" src="/images/argument3.png" alt="третья причина - это все твои words">
+            <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument3.png?raw=true" alt="третья причина - это все твои words">
             <h3>Гарантия качества</h3>
         </div>
         <div class="col-4">
-            <img class="arguments" src="/images/argument4.png" alt="четвертая причина - это false">
+            <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument4.png?raw=true" alt="четвертая причина - это false">
             <h3>Быстрая доставка</h3>
         </div>
     </div>
