--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
         }
         }
 
+        h1 {
+            padding: 10px;
+        }
+
         h3 { 
-        text-align: center 
+        text-align: center;
+        }
+
+        h1, h2, h3 {
+        font-family: Gorizont,sans-serif;
         }
 
         img.arguments {
@@ -63,9 +71,17 @@
         margin-right: auto;
         }
 
+        hr {
+        border: none; /* Убираем границу */
+        background-color: rgb(0, 0, 0); /* Цвет линии */
+        color: rgb(0, 0, 0); /* Цвет линии для IE6-7 */
+        height: 2px; /* Толщина линии */
+    }
+
     </style>
 </head>
 <body>
+    <h2 class="main">Наши преимущества<hr></h2>
     <div class="main inline">
         <div class="col-1">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument1.png?raw=true" alt="первая причина - это you">
