--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         hr {
         border: none; /* Убираем границу */
         background-color: rgb(0, 0, 0); /* Цвет линии */
-        color: rgb(0, 0, 0); /* Цвет линии для IE6-7 */
-        height: 2px; /* Толщина линии */
+        color: rgb(0, 0, 0); 
+        height: 2px; 
     }
 
     </style>
