--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         hr {
         border: none; /* Убираем границу */
-        background-color: rgb(0, 0, 0); /* Цвет линии */
+        background-color: rgb(0, 0, 0); 
         color: rgb(0, 0, 0); 
         height: 2px; 
     }
