--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         }
 
         hr {
-        border: none; /* Убираем границу */
+        border: none; 
         background-color: rgb(0, 0, 0); 
         color: rgb(0, 0, 0); 
         height: 2px; 
