--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
         
         }
         div.inline{font-size:0;} /* Ставим родителю значение 0, чтобы убрать отступы у блоков*/
-        .col-1{
+        .argue1{
         width:25%; /*Задаем ширину в процентах чтобы сделать ее резиновой*/
         height:150px; /* Высота блока */
         background:rgb(255, 219, 244);
         border-radius: 20px 0px 0px 20px;
         }
-        .col-2{
+        .argue2{
         width:25%; /*Задаем ширину в процентах чтобы сделать ее резиновой*/
         height:150px; /* Высота блока */
         background:rgb(255, 219, 225);
         }
-        .col-3{
+        .argue3{
         width:25%;
         height:150px;
         background:rgb(255, 219, 244);
         }
-        .col-4{
+        .argue4{
         width:25%;
         height:150px;
         background:rgb(255, 219, 225);
@@ -83,19 +83,19 @@
 <body>
     <h2 class="main">Наши преимущества<hr></h2>
     <div class="main inline">
-        <div class="col-1">
+        <div class="argue1">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument1.png?raw=true" alt="первая причина - это you">
             <h3>Многообразие</h3>
         </div>
-        <div class="col-2">
+        <div class="argue2">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument2.png?raw=true" alt="а вторая - все твои dreams">
             <h3>Низкие цены</h3>
         </div>
-        <div class="col-3">
+        <div class="argue3">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument3.png?raw=true" alt="третья причина - это все твои words">
             <h3>Гарантия качества</h3>
         </div>
-        <div class="col-4">
+        <div class="argue4">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument4.png?raw=true" alt="четвертая причина - это false">
             <h3>Быстрая доставка</h3>
         </div>
