--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Блок преимуществ</title>
-    <link rel="stylesheet" href="advantage.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <h2 class="main">Наши преимущества<hr></h2>
-    <div class="main inline">
-        <div class="argue1">
+    <div class="container">
+        <div class="row">
+        <h2 class="w-100">Наши преимущества<hr></h2>
+        <div class="col-md-3 col-6 text-center">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument1.png?raw=true" alt="первая причина - это you">
             <h3>Многообразие</h3>
         </div>
-        <div class="argue2">
+        <div class="col-md-3 col-6 text-center">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument2.png?raw=true" alt="а вторая - все твои dreams">
             <h3>Низкие цены</h3>
         </div>
-        <div class="argue3">
+        <div class="col-md-3 col-6 text-center">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument3.png?raw=true" alt="третья причина - это все твои words">
             <h3>Гарантия качества</h3>
         </div>
-        <div class="argue4">
+        <div class="col-md-3 col-6 text-center">
             <img class="arguments" src="https://github.com/shpilson/applestore/blob/master/images/argument4.png?raw=true" alt="четвертая причина - это false">
             <h3>Быстрая доставка</h3>
+        </div>
         </div>
     </div>
 </body>
