--- a/mymap.html
+++ b/mymap.html
@@ -1,12 +1,6 @@
 <div class="mymap_section">
 
-    <div class="contact__map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A48aa462ef9cd620ee89a27a1180cc6b90c4ccb638a222fa18e840e0c63a6f6a5&amp;source=constructor" width="auto" height="auto" frameborder="0" 
-        style="width: 100%;
-        height: 100%;
-        position: absolute;"></iframe>
-      </div>
-      
+
     <div class="container">
 <div class="contact-with-map row">
   <div class="contacts col-md-4 col-12">
@@ -51,6 +45,9 @@
     </li>
     
     </ul>
+  </div>
+  <div class="contact__map">
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A48aa462ef9cd620ee89a27a1180cc6b90c4ccb638a222fa18e840e0c63a6f6a5&amp;source=constructor" width="auto" height="auto" frameborder="0"></iframe>
   </div>
 </div>
   </div></div>
