--- a/popup.html
+++ b/popup.html
@@ -2,63 +2,32 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="module" src="https://shpilson.github.io/applestore/mymodal.js"></script>
-<link rel="stylesheet" href="https://shpilson.github.io/applestore/mymodal.css">
+<link rel="stylesheet" href="https://github.com/shpilson/applestore/mymodal.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 
-<h2>Animated Modal with Header and Footer</h2>
-
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
+  <!-- The Modal -->
+<div id="modal" class="modal">
 
   <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-header">
-      <span class="close">&times;</span>
-      <h2>Modal Header</h2>
+      <span class="close" id='close'>&times;</span>
+      <h2>Добро пожаловать на сайт!</h2>
     </div>
     <div class="modal-body">
-      <p>Some text in the Modal Body</p>
-      <p>Some other text...</p>
+      <p>Этот шаблон создан с целью демострации возможностей платформы.</p>
+      <p>Хотите такой же сайт? Присоединяйтесь!</p>
     </div>
     <div class="modal-footer">
-      <h3>Modal Footer</h3>
+      <h3><a href="https://www.sellavi.com/">www.sellavi.com</a></h3>
     </div>
   </div>
 
 </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+<script src="https://github.com/shpilson/applestore/mymodal.js"></script> 
 
 </body>
 </html>
