--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://github.com/shpilson/applestore/mymodal.css">
+<link rel="stylesheet" href="https://shpilson.github.io/applestore/mymodal.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
 
 </div>
 
-<script src="https://github.com/shpilson/applestore/mymodal.js"></script> 
+<script src="https://shpilson.github.io/applestore/mymodal.js"></script> 
 
 </body>
 </html>
