--- a/popup.html
+++ b/popup.html
@@ -14,14 +14,13 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close" id='close'>&times;</span>
-      <h2>Добро пожаловать на сайт!</h2>
+      <h4>Добро пожаловать на сайт!</h4>
     </div>
     <div class="modal-body">
-      <p>Этот шаблон создан с целью демострации возможностей платформы.</p>
-      <p>Хотите такой же сайт? Присоединяйтесь!</p>
+      <h6>Этот шаблон создан с целью демонстрации возможностей платформы.</h6>
     </div>
     <div class="modal-footer">
-      <h3><a href="https://www.sellavi.com/">www.sellavi.com</a></h3>
+      <a href="https://www.sellavi.com/"><img src="https://www.sellavi.com/assets/logo.svg"></a>
     </div>
   </div>
 
